--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.abhi.rajasthantourplan">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +20,9 @@
         </activity>
         <activity android:name=".tourdates" />
         <activity android:name=".touristplaces" />
-        <activity android:name=".places"></activity>
+        <activity android:name=".places" />
+        <activity android:name=".completejsondata" />
+        <activity android:name=".listview"></activity>
     </application>
 
 </manifest>
