--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.abhi.rajasthantourplan">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -19,10 +20,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".tourdates" />
+        <activity android:name=".Events" />
+        <activity android:name=".hotels" />
+        <activity android:name=".transport_new" />
+        <activity android:name=".webview" />
         <activity android:name=".touristplaces" />
-        <activity android:name=".places" />
         <activity android:name=".completejsondata" />
-        <activity android:name=".listview"></activity>
+        <activity android:name=".listview" />
+        <activity android:name=".apionlinedata" />
+        <activity android:name=".secondcompletejsondata" />
+        <activity android:name=".tourschedule"></activity>
     </application>
 
 </manifest>
